option('build_test', type : 'boolean', value : true, description : 'Build tests')
option('macosx_version_min', type : 'string', value : '10.9',
       description : 'Deployment target for macOS.')
option('macosx_universal', type : 'boolean', value : false,
       description : 'Build universal binary for macOS.')
option('use_ucrt', type : 'boolean', value : false,
       description : 'Use dynamic linked UCRT for Windows 10 or later')
